--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "formik": "^2.2.9",
     "nanoid": "^3.1.23",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "lint:fix": "eslint --fix"
   },
@@ -42,11 +45,17 @@
     ]
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "compression-webpack-plugin": "4.0.0",
+    "customize-cra": "^1.0.0",
     "eslint": "^7.29.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "react-app-rewire-build-dev": "^1.0.1",
+    "react-app-rewired": "^2.1.8",
+    "uglifyjs-webpack-plugin": "^2.2.0"
   }
 }
