--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
+    "@loadable/component": "^5.15.0",
+    "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -27,7 +28,8 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
-    "lint:fix": "eslint --fix"
+    "lint:fix": "eslint . --fix --ext .js,.jsx",
+    "lint": "eslint ."
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -45,6 +47,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
+    "@loadable/babel-plugin": "^5.13.2",
+    "babel-plugin-import": "^1.13.3",
+    "babel-plugin-transform-imports": "^2.0.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "compression-webpack-plugin": "4.0.0",
     "customize-cra": "^1.0.0",
