--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-redux": "^7.2.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "yup": "^0.32.9"
   },
   "scripts": {
@@ -66,6 +66,6 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "react-app-rewire-build-dev": "^1.0.1",
     "react-app-rewired": "^2.1.8",
-    "uglifyjs-webpack-plugin": "^2.2.0"
+    "uglifyjs-webpack-plugin": "^1.1.2"
   }
 }
