--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@loadable/component": "^5.15.0",
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/pickers": "^3.3.10",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -15,19 +16,19 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "draft-js": "^0.11.7",
-    "formik": "^2.2.9",
-    "formik-material-ui": "^3.0.1",
-    "formik-material-ui-pickers": "^0.0.12",
     "moment": "^2.29.1",
     "nanoid": "^3.1.23",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^17.0.2",
     "react-mui-draft-wysiwyg": "^1.0.3",
+    "react-query": "^3.19.1",
     "react-redux": "^7.2.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "redux-logger": "^3.0.6",
     "yup": "^0.32.9"
   },
   "scripts": {
