--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "nanoid": "^3.1.23",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^17.0.2",
     "react-mui-draft-wysiwyg": "^1.0.3",
     "react-query": "^3.19.1",
     "react-redux": "^7.2.3",
+    "react-reveal": "^1.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
