--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.3.1",
     "draft-js": "^0.11.7",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "nanoid": "^3.1.23",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
