--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "draft-js": "^0.11.7",
+    "express": "^4.17.1",
+    "json-as-xlsx": "^2.0.1",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "nanoid": "^3.1.23",
@@ -29,7 +31,6 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
-    "redux-logger": "^3.0.6",
     "yup": "^0.32.9"
   },
   "scripts": {
@@ -56,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.15.0",
     "@babel/plugin-proposal-logical-assignment-operators": "^7.14.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-react": "^7.14.5",
