--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
-    "lint:fix": "eslint . --fix --ext .js,.jsx",
+    "lint:fix": "eslint src --fix --ext .js,.jsx",
     "lint": "eslint ."
   },
   "eslintConfig": {
