--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
 		"@babel/preset-react": "^7.14.5",
 		"@loadable/babel-plugin": "^5.13.2",
 		"babel-plugin-transform-imports": "^2.0.0",
+		"babel-plugin-transform-react-remove-prop-types": "^0.4.24",
 		"clean-webpack-plugin": "^4.0.0-alpha.0",
 		"compression-webpack-plugin": "4.0.0",
 		"customize-cra": "^1.0.0",
@@ -94,6 +95,8 @@
 		"prettier": "^2.3.2",
 		"react-app-rewire-build-dev": "^1.0.1",
 		"react-app-rewired": "^2.1.8",
-		"uglifyjs-webpack-plugin": "^1.1.2"
+		"terser-webpack-plugin": "4.*",
+		"uglifyjs-webpack-plugin": "^1.1.2",
+		"webpack-deadcode-plugin": "^0.1.14"
 	}
 }
