--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
 		"axios": "^0.21.1",
+		"browser-image-compression": "^1.0.15",
 		"classnames": "^2.3.1",
 		"draft-js": "^0.11.7",
 		"json-as-xlsx": "^2.0.1",
