fix: reduce speed load

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"license": "MIT",
+	"homepage": "https://brainspark-reservation.vercel.app",
 	"author": {
 		"name": "Angga Ady Pratama",
 		"email": "anggaadypratama@outlook.com",
@@ -49,9 +50,6 @@
 		"@material-ui/lab": "^4.0.0-alpha.60",
 		"@material-ui/pickers": "^3.3.10",
 		"@reduxjs/toolkit": "^1.5.1",
-		"@testing-library/jest-dom": "^4.2.4",
-		"@testing-library/react": "^9.3.2",
-		"@testing-library/user-event": "^7.1.2",
 		"axios": "^0.21.1",
 		"browser-image-compression": "^1.0.15",
 		"classnames": "^2.3.1",
@@ -91,6 +89,7 @@
 		"eslint-plugin-prettier": "^3.4.0",
 		"eslint-plugin-react": "^7.24.0",
 		"eslint-plugin-react-hooks": "^4.2.0",
+		"html-critical-webpack-plugin": "^2.1.0",
 		"husky": "^7.0.1",
 		"lint-staged": "^11.1.2",
 		"prettier": "^2.3.2",
