--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,17 +9,17 @@
 		},
 		{
 			"src": "logo192.webp",
-			"type": "image/png",
+			"type": "image/webp",
 			"sizes": "192x192"
 		},
 		{
 			"src": "logo512.webp",
-			"type": "image/png",
+			"type": "image/webp",
 			"sizes": "512x512"
 		}
 	],
-	"start_url": ".",
+	"start_url": "./index.html",
 	"display": "standalone",
-	"theme_color": "#000000",
+	"theme_color": "#FF7A00",
 	"background_color": "#ffffff"
 }
