--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"prop-types": "^15.7.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-lazy-load-image-component": "^1.5.1",
 		"react-mui-draft-wysiwyg": "^1.0.3",
 		"react-query": "^3.19.1",
 		"react-redux": "^7.2.3",
