--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
 		"classnames": "^2.3.1",
 		"draft-js": "^0.11.7",
 		"json-as-xlsx": "^2.0.1",
-		"moment": "^2.29.1",
 		"moment-timezone": "^0.5.33",
 		"nanoid": "^3.1.23",
 		"prop-types": "^15.7.2",
@@ -98,6 +97,7 @@
 		"react-app-rewired": "^2.1.8",
 		"terser-webpack-plugin": "4.*",
 		"uglifyjs-webpack-plugin": "^1.1.2",
+		"webpack-bundle-analyzer": "^4.4.2",
 		"webpack-deadcode-plugin": "^0.1.14"
 	}
 }
