--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,4 +7,4 @@ services:
     ports: 
       - 80:80
     environment: 
-      - REACT_APP_BASE_URL=http://localhost:3000
+      - REACT_APP_BASE_URL=https://brainspark-api.herokuapp.com
