--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"license": "MIT",
-	"homepage": "https://brainspark-reservation.vercel.app",
+	"homepage": "https://rplgdc-brainspark.vercel.app",
 	"author": {
 		"name": "Angga Ady Pratama",
 		"email": "anggaadypratama@outlook.com",
